--- a/BeamCore/build.gradle
+++ b/BeamCore/build.gradle
@@ -4,8 +4,9 @@ plugins {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-
+    implementation 'com.github.BlueMap-Minecraft:BlueMapAPI:v2.1.0'
 }
